--- a/spring-jenkins-pipeline/src/main/resources/application.properties
+++ b/spring-jenkins-pipeline/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # the db host
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=mongo2.3didemo.com
 # the connection port (defaults to 27107)
 spring.data.mongodb.port=27017
 # The database's name
